--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon app.js",
-    "env": "./node_modules/.bin/handy-client-env",
+    "start": "nodemon app.js",
+    "env": "handy-client-env",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --coverage",
